tests/ui/parser/keyword-for-as-identifier.rs
// This file was auto-generated using 'src/etc/generate-keyword-tests.py for'

fn main() {
    let for = "foo"; //~ error: expected identifier, found keyword `for`
}
